edit konten penida

--- a/penidahalfdaymix.html
+++ b/penidahalfdaymix.html
@@ -157,12 +157,12 @@
 
                         <div class="content">
                             <p>- Available: everyday
+                                <br> - Kelingking Cliff
+                                <br> - Paluang Cliff
+                                <br> - Rumah Pohon
                                 <br> - Diamond Beach
-                                <br> - Raja Lima / Pulau Seribu
-                                <br> - Rumah pohon Molenteng
-                                <br> - Angels Billabong
-                                <br> - Broken Beach / Pasih Uug
-                                <br> - Kelingking Beach
+                                <br> - Pulau Seribu
+                                <br> - Atuh Beach
                             </p>
                         </div>
                     </div>
@@ -268,35 +268,35 @@
                             <tbody>
                                 <tr>
                                     <td>1</td>
-                                    <td>Rp 800.000</td>
-                                    <td>Rp 800.000</td>
+                                    <td>Rp 1.100.000</td>
+                                    <td>Rp 1.100.000</td>
                                 </tr>
 
                                 <tr>
                                     <td>2</td>
-                                    <td>Rp 525.000</td>
-                                    <td>Rp 1.050.000</td>
+                                    <td>Rp 650.000</td>
+                                    <td>Rp 1.300.000</td>
                                 </tr>
 
                                 <tr>
                                     <td>3</td>
-                                    <td>Rp 435.000</td>
-                                    <td>Rp 1.305.000</td>
+                                    <td>Rp 525.000</td>
+                                    <td>Rp 1.575.000</td>
                                 </tr>
                                 <tr>
                                     <td>4</td>
-                                    <td>Rp 375.000</td>
-                                    <td>Rp 1.500.000</td>
+                                    <td>Rp 475.000</td>
+                                    <td>Rp 1,900.000</td>
                                 </tr>
                                 <tr>
                                     <td>5</td>
-                                    <td>Rp 350.000</td>
-                                    <td>Rp 1.750.000</td>
+                                    <td>Rp 425.000</td>
+                                    <td>Rp 2.125.000</td>
                                 </tr>
                                 <tr>
                                     <td>6</td>
-                                    <td>Rp 325.000 </td>
-                                    <td>Rp 1.950.000</td>
+                                    <td>Rp 400.000 </td>
+                                    <td>Rp 2.400.000</td>
                                 </tr>
                             </tbody>
                         </table>
@@ -309,7 +309,7 @@
 
             <div class="sidebar-item recent-posts">
                 <div class="sidebar-heading">
-                    <h2>itinerary</h2>
+                    <h2>Details</h2>
                 </div>
 
                 <div class="content">
@@ -323,7 +323,9 @@
                                 </div>
                                 <div class="col-md-10 col-sm-9">
                                     <p>
-                                        Donec dapibus semper sem, ac ultrices sem sagittis ut. Donec sit amet erat elit, sed pellentesque odio. In enim ligula, euismod a adipiscing in, laoreet quis turpis. Ut accumsan dignissim rutrum.
+                                        07.30 : Bertemu di Pantai Sanur<br> 08.00 : Boat berangkat menuju Nusa Penida<br> 08.45 : Boat tiba di Nusa Penida<br> 09.30 : Berkunjung ke Kelingking & Paluang Cliff<br> 11.30 : Berkunjung ke Pulau Seribu & Rumah
+                                        Pohon
+                                        <br> 12.30 : Makan siang<br> 14.30 : Berkunjung ke Diamond & Atuh Beach<br> 16.00 : Kembali ke dermaga di Penida<br> 16.30 : Boat berangkat menuju Pantai Sanur<br> 17.30 : Tiba kembali di Pantai Sanur<br>
                                     </p>
                                 </div>
                             </div>
@@ -339,7 +341,7 @@
 
                                 <div class="col-md-10 col-sm-9">
                                     <p>
-                                        Donec dapibus semper sem, ac ultrices sem sagittis ut. Donec sit amet erat elit, sed pellentesque odio. In enim ligula, euismod a adipiscing in, laoreet quis turpis. Ut accumsan dignissim rutrum.
+                                        Tiket Boat PP Sanur-Penida<br> Mobil + BBM + Driver/Guide di Penida<br> Tiket Wisata<br> Makan Siang (Nasi Kotak)*<br> Air Mineral<br>
                                     </p>
                                 </div>
                             </div>
@@ -354,7 +356,9 @@
                                 </div>
                                 <div class="col-md-10 col-sm-9">
                                     <p>
-                                        Not allowed
+                                        Kaca Mata HItam<br> Sun Block<br> Uang Tunai<br> Celana Pendek/Baju Ganti<br> Sandal/Sepatu hiking atau sporty<br> Tas Anti Air<br> Hp
+                                        <br> Kamera
+                                        <br>
                                     </p>
                                 </div>
                             </div>
@@ -370,8 +374,7 @@
                                 <div class="col-md-10 col-sm-9">
                                     <div>
                                         <p>
-                                            Donec dapibus semper sem, ac ultrices sem sagittis ut. Donec sit amet erat elit, sed pellentesque odio. In enim ligula, euismod a adipiscing in, laoreet quis turpis. Ut accumsan dignissim rutrum. <br> Donec
-                                            dapibus semper sem, ac ultrices sem sagittis ut. Donec sit amet erat elit, sed pellentesque odio. In enim ligula, euismod a adipiscing in, laoreet quis turpis. Ut accumsan dignissim rutrum. <br>
+                                            Upgrade makan siang di resto, biaya tambahan Rp. 50.000,-/Orang<br> Antar jemput hotel, biaya tambahan 250.000-400.000 per mobil.<br>
                                         </p>
                                     </div>
                                 </div>
