--- a/penidahalfdaysnorkeling.html
+++ b/penidahalfdaysnorkeling.html
@@ -86,7 +86,7 @@
                     <div class="col-lg-12">
                         <div class="text-content">
                             <h4>€300 - €4000</h4>
-                            <h2>Nusa Penida, Two Day One Night Tour.</h2>
+                            <h2>Nusa Penida, Halfday + Snorkeling.</h2>
                         </div>
                     </div>
                 </div>
@@ -101,7 +101,7 @@
             <div class="row">
                 <div class="col-md-7">
                     <div>
-                        <img src="assets/images/product-1-720x480.jpg" alt="" class="img-fluid wc-image">
+                        <img src="assets/images/penida4.jpg" alt="" class="img-fluid wc-image">
                     </div>
 
                     <br>
@@ -109,7 +109,7 @@
                     <div class="row">
                         <div class="col-sm-4 col-6">
                             <div>
-                                <img src="assets/images/product-1-720x480.jpg" alt="" class="img-fluid">
+                                <img src="assets/images/penida-1.jpg" alt="" class="img-fluid">
                             </div>
                             <br>
                         </div>
@@ -156,16 +156,12 @@
                         </div>
 
                         <div class="content">
-                            <p>- Available: Everyday
-                                <br> - Kelingking Beach
-                                <br> - Broken Beach (Pasih Uug)
-                                <br> - Angel’s Billabong
+                            <p>- Available: everyday
+                                <br> - Kelingking Cliff
+                                <br> - Paluang Cliff
                                 <br> - Crystal Bay
-                                <br> - Atuh Beach (Pantai Atuh)
-                                <br> - Diamond Beach
-                                <br> - Pulau Seribu/ Raja Lima
-                                <br> - Rumah Pohon (Molenteng)
-                                <br> - Bukit Teletubies
+                                <br> - GMAT
+                                <br> - Manta Bay
                             </p>
                         </div>
                     </div>
@@ -267,36 +263,42 @@
                                     <th>Amount</th>
                                 </tr>
                             </thead>
+
                             <tbody>
                                 <tr>
                                     <td>1</td>
-                                    <td>Rp 1.850.000</td>
-                                    <td>Rp 1.850.000</td>
+                                    <td>Rp 1.300.000</td>
+                                    <td>Rp 1.300.000</td>
                                 </tr>
+
                                 <tr>
                                     <td>2</td>
-                                    <td>Rp 1.150.000 </td>
-                                    <td>Rp 2.300.000</td>
+                                    <td>Rp 750.000</td>
+                                    <td>Rp 1.500.000</td>
                                 </tr>
+
                                 <tr>
                                     <td>3</td>
-                                    <td>Rp 950.000</td>
-                                    <td>Rp 2.850.000</td>
+                                    <td>Rp 650.000</td>
+                                    <td>Rp 1.950.000</td>
                                 </tr>
+
                                 <tr>
                                     <td>4</td>
-                                    <td>Rp 825.000</td>
-                                    <td>Rp 3.300.000</td>
+                                    <td>Rp 600.000</td>
+                                    <td>Rp 2.400.000</td>
                                 </tr>
+
                                 <tr>
                                     <td>5</td>
-                                    <td>Rp 750.000</td>
-                                    <td>Rp 3.750.000</td>
+                                    <td>Rp 550.000</td>
+                                    <td>Rp 2.750.000</td>
                                 </tr>
+
                                 <tr>
                                     <td>6</td>
-                                    <td>Rp 725.000</td>
-                                    <td>Rp 4.350.000</td>
+                                    <td>Rp 530.000</td>
+                                    <td>Rp 3.180.000</td>
                                 </tr>
                             </tbody>
                         </table>
@@ -323,9 +325,8 @@
                                 </div>
                                 <div class="col-md-10 col-sm-9">
                                     <p>
-                                        <strong>Hari 1 :</strong><br> 07.30 Bertemu di Pantai Sanur.<br> 08.00 Boat berangkat menuju Nusa Penida<br> 08.45 Boat tiba di Nusa Penida<br> 09.30 Mengunjungi Broken Beach & Billabong<br> 12.30 Makan Siang<br>                                        14.00 Mengunjungi Kelingking Beach & Paluang Cliff<br> 16.30 Mengunjungi Crystal Beach (Sunset)<br> 19.00 Antar makan malam di local resto<br> 20.00 Kembali ke hotel<br>
-                                        <strong>Hari 2</strong><br> 07.00 Breakfast di hotel<br> 08.00 Jemput di hotel<br> 09.00 Mengunjungi Bukit Teletubbies<br> 11.00 Mengunjungi Rumah Pohon & Pulau Seribu<br> 12.30 Makan siang<br> 14.00 Mengunjungi
-                                        Diamond Beach<br> 14.30 Mengunjungi Atuh Beach<br> 16.00 Tiba di pelabuhan Penida<br> 16.30 Boat berangkat menuju pantai Sanur<br> 17.30 Tiba kembali di Pantai Sanur<br>
+                                        07.30 : Bertemu di Pantai Sanur<br> 08.00 : Boat Berangkat menuju Nusa Penida<br> 08.45 : Boat tiba di Nusa Penida<br> 09.30 : Mengunjungi Crystal Bay untuk Snorkeling<br> 12.00 : Mengunjungi Kelingking Beach &
+                                        Peluang Cliff<br> 13.00 : Makan siang<br> 14.30 : Mengunjungi Broken Beach & Angels Billabong<br> 16.00 : Kembali ke Dermaga<br> 16.30 : Boat berangkat menuju Pantai Sanur<br> 17.30 : Tiba di Pantai Sanur
                                     </p>
                                 </div>
                             </div>
@@ -341,7 +342,7 @@
 
                                 <div class="col-md-10 col-sm-9">
                                     <p>
-                                        Tiket Boat PP Sanur-Penida<br> Mobil + BBM + Driver/Guide di Penida<br> Makan Siang (Nasi Kotak* dan resto) & Air mineral<br> Hotel (AC + WIFI + Breakfast + Swimming Pool)<br> Tiket Wisata<br>
+                                        Tiket Boat PP Sanur-Penida<br> Mobil + BBM + Driver/Guide di Penida<br> Tiket Wisata & Alat Snorkeling<br> Makan Siang (Nasi Kotak)*<br> Air Mineral
                                     </p>
                                 </div>
                             </div>
@@ -358,7 +359,6 @@
                                     <p>
                                         Kaca Mata HItam<br> Sun Block<br> Uang Tunai<br> Celana Pendek/Baju Ganti<br> Sandal/Sepatu hiking atau sporty<br> Tas Anti Air<br> Hp
                                         <br> Kamera
-                                        <br>
                                     </p>
                                 </div>
                             </div>
@@ -374,7 +374,7 @@
                                 <div class="col-md-10 col-sm-9">
                                     <div>
                                         <p>
-                                            Upgrade makan siang di resto, biaya tambahan Rp. 50.000,-/Orang <br> Antar jemput hotel, biaya tambahan 250.000-400.000 per mobil. <br>
+                                            Upgrade makan siang di resto, biaya tambahan Rp. 50.000,-/Orang<br> Antar jemput hotel, biaya tambahan 250.000-400.000 per mobil.<br>
                                         </p>
                                     </div>
                                 </div>
