--- a/penidahalfdaytimur.html
+++ b/penidahalfdaytimur.html
@@ -325,7 +325,9 @@
                                 </div>
                                 <div class="col-md-10 col-sm-9">
                                     <p>
-                                        Donec dapibus semper sem, ac ultrices sem sagittis ut. Donec sit amet erat elit, sed pellentesque odio. In enim ligula, euismod a adipiscing in, laoreet quis turpis. Ut accumsan dignissim rutrum.
+                                        07.30 : Meeting Point di Pelabuhan Sanur<br> 08.00 : Berangkat menuju Nusa Penida dengan Speedboat<br> 08.30 : Tiba di Pulau Nusa Penida<br> 09.15 : Tiba di Spot Pertama Teletubies Hills<br> 09.30 : Tiba di Spot
+                                        Rumah Pohon (Molenteng) dan Pulau Seribu<br> 11.00 : Tiba di Diamond Beach / Titi Behu<br> 13.00 : Diantar ke lokasi makan siang<br> 14.30 : Tiba di Atuh Beach<br> 15.30 : Kembali ke Darmaga<br> 17.00 : Kembali
+                                        ke Pantai Sanur menggunakan speedboat<br> 17.45 : Tiba di Pelabuhan Sanur.
                                     </p>
                                 </div>
                             </div>
@@ -341,7 +343,7 @@
 
                                 <div class="col-md-10 col-sm-9">
                                     <p>
-                                        Donec dapibus semper sem, ac ultrices sem sagittis ut. Donec sit amet erat elit, sed pellentesque odio. In enim ligula, euismod a adipiscing in, laoreet quis turpis. Ut accumsan dignissim rutrum.
+                                        Tiket Boat PP Sanur-Penida<br> Mobil + BBM + Driver/Guide di Penida<br> Tiket Wisata<br> Makan Siang (Nasi Kotak)*<br> Air Mineral
                                     </p>
                                 </div>
                             </div>
@@ -356,7 +358,8 @@
                                 </div>
                                 <div class="col-md-10 col-sm-9">
                                     <p>
-                                        Not allowed
+                                        Kaca Mata HItam<br> Sun Block<br> Uang Tunai<br> Celana Pendek/Baju Ganti<br> Sandal/Sepatu hiking atau sporty<br> Tas Anti Air<br> Hp
+                                        <br> Kamera.
                                     </p>
                                 </div>
                             </div>
@@ -372,8 +375,7 @@
                                 <div class="col-md-10 col-sm-9">
                                     <div>
                                         <p>
-                                            Donec dapibus semper sem, ac ultrices sem sagittis ut. Donec sit amet erat elit, sed pellentesque odio. In enim ligula, euismod a adipiscing in, laoreet quis turpis. Ut accumsan dignissim rutrum. <br> Donec
-                                            dapibus semper sem, ac ultrices sem sagittis ut. Donec sit amet erat elit, sed pellentesque odio. In enim ligula, euismod a adipiscing in, laoreet quis turpis. Ut accumsan dignissim rutrum. <br>
+                                            Upgrade makan siang di resto, biaya tambahan Rp. 50.000,-/Orang<br> Antar jemput hotel, biaya tambahan 250.000-400.000 per mobil.<br>
                                         </p>
                                     </div>
                                 </div>
