--- a/penidaonedayonenight.html
+++ b/penidaonedayonenight.html
@@ -322,7 +322,9 @@
                                 </div>
                                 <div class="col-md-10 col-sm-9">
                                     <p>
-                                        Donec dapibus semper sem, ac ultrices sem sagittis ut. Donec sit amet erat elit, sed pellentesque odio. In enim ligula, euismod a adipiscing in, laoreet quis turpis. Ut accumsan dignissim rutrum.
+                                        07.30 : Bertemu di Pantai Sanur<br> 08.00 : Boat berangkat menuju Nusa Penida<br> 08.45 : Boat tiba di Nusa Penida<br> 10.15 : Mengunjungi Pulau Seribu dan Rumah Pohon<br> 11.30 : Mengunjungi Diamond Beach<br> 12.00
+                                        : Makan Siang<br> 13.00 : Mengunjungi Angels Billabong & Broken Beach<br> 14.00 : Mengunjungi Kelingking Cliff dan Peluang Cliff<br> 16.30 : Mengunjungi Crystal Bay<br> 18.30 : Check in Hotel<br> 07.00 : Menuju
+                                        Pelabuhan di Nusa Penida<br> 08.00 : Tiba kembali di Panta Sanur<br>
                                     </p>
                                 </div>
                             </div>
@@ -338,7 +340,7 @@
 
                                 <div class="col-md-10 col-sm-9">
                                     <p>
-                                        Donec dapibus semper sem, ac ultrices sem sagittis ut. Donec sit amet erat elit, sed pellentesque odio. In enim ligula, euismod a adipiscing in, laoreet quis turpis. Ut accumsan dignissim rutrum.
+                                        Tiket Boat PP Sanur-Penida<br> Mobil + BBM + Driver/Guide di Penida<br> TIket Wisata<br> Makan Siang (Nasi Kotak)*<br> Air Mineral<br>
                                     </p>
                                 </div>
                             </div>
@@ -353,7 +355,9 @@
                                 </div>
                                 <div class="col-md-10 col-sm-9">
                                     <p>
-                                        Not allowed
+                                        Kaca Mata HItam<br> Sun Block<br> Uang Tunai<br> Celana Pendek/Baju Ganti<br> Sandal/Sepatu hiking atau sporty<br> Tas Anti Air<br> Hp
+                                        <br> Kamera
+                                        <br>
                                     </p>
                                 </div>
                             </div>
@@ -369,8 +373,7 @@
                                 <div class="col-md-10 col-sm-9">
                                     <div>
                                         <p>
-                                            Donec dapibus semper sem, ac ultrices sem sagittis ut. Donec sit amet erat elit, sed pellentesque odio. In enim ligula, euismod a adipiscing in, laoreet quis turpis. Ut accumsan dignissim rutrum. <br> Donec
-                                            dapibus semper sem, ac ultrices sem sagittis ut. Donec sit amet erat elit, sed pellentesque odio. In enim ligula, euismod a adipiscing in, laoreet quis turpis. Ut accumsan dignissim rutrum. <br>
+                                            Upgrade makan siang di resto, biaya tambahan Rp. 50.000,-/Orang<br> Antar jemput hotel, biaya tambahan 250.000-400.000 per mobil.<br>
                                         </p>
                                     </div>
                                 </div>
