--- a/penidaonedayonenightsnorkeling.html
+++ b/penidaonedayonenightsnorkeling.html
@@ -86,7 +86,7 @@
                     <div class="col-lg-12">
                         <div class="text-content">
                             <h4>€300 - €4000</h4>
-                            <h2>Nusa Penida, Two Day One Night Tour.</h2>
+                            <h2>Nusa Penida, One Day One Night + Snorkeling.</h2>
                         </div>
                     </div>
                 </div>
@@ -157,15 +157,12 @@
 
                         <div class="content">
                             <p>- Available: Everyday
-                                <br> - Kelingking Beach
-                                <br> - Broken Beach (Pasih Uug)
-                                <br> - Angel’s Billabong
+                                <br> - Kelingking Cliff
+                                <br> - Broken Beach
+                                <br> - Angels Billabong
+                                <br> - Paluang Cliff
                                 <br> - Crystal Bay
-                                <br> - Atuh Beach (Pantai Atuh)
-                                <br> - Diamond Beach
-                                <br> - Pulau Seribu/ Raja Lima
-                                <br> - Rumah Pohon (Molenteng)
-                                <br> - Bukit Teletubies
+                                <br> - Snorkeling
                             </p>
                         </div>
                     </div>
@@ -267,36 +264,37 @@
                                     <th>Amount</th>
                                 </tr>
                             </thead>
+
                             <tbody>
                                 <tr>
                                     <td>1</td>
-                                    <td>Rp 1.850.000</td>
-                                    <td>Rp 1.850.000</td>
+                                    <td>Rp 1.700.000</td>
+                                    <td>Rp 1.700.000</td>
                                 </tr>
                                 <tr>
                                     <td>2</td>
-                                    <td>Rp 1.150.000 </td>
-                                    <td>Rp 2.300.000</td>
+                                    <td>Rp 1.200.000</td>
+                                    <td>Rp 2.400.000</td>
                                 </tr>
                                 <tr>
                                     <td>3</td>
-                                    <td>Rp 950.000</td>
-                                    <td>Rp 2.850.000</td>
+                                    <td>Rp 1.050.000</td>
+                                    <td>Rp 3.150.000</td>
                                 </tr>
                                 <tr>
                                     <td>4</td>
-                                    <td>Rp 825.000</td>
-                                    <td>Rp 3.300.000</td>
+                                    <td>Rp 950.000</td>
+                                    <td>Rp 3.800.000</td>
                                 </tr>
                                 <tr>
                                     <td>5</td>
-                                    <td>Rp 750.000</td>
-                                    <td>Rp 3.750.000</td>
+                                    <td>Rp 900.000</td>
+                                    <td>Rp 4.500.000</td>
                                 </tr>
                                 <tr>
                                     <td>6</td>
-                                    <td>Rp 725.000</td>
-                                    <td>Rp 4.350.000</td>
+                                    <td>Rp 875.000</td>
+                                    <td>Rp 5.250.000</td>
                                 </tr>
                             </tbody>
                         </table>
@@ -309,7 +307,7 @@
 
             <div class="sidebar-item recent-posts">
                 <div class="sidebar-heading">
-                    <h2>Details</h2>
+                    <h2>details</h2>
                 </div>
 
                 <div class="content">
@@ -323,9 +321,9 @@
                                 </div>
                                 <div class="col-md-10 col-sm-9">
                                     <p>
-                                        <strong>Hari 1 :</strong><br> 07.30 Bertemu di Pantai Sanur.<br> 08.00 Boat berangkat menuju Nusa Penida<br> 08.45 Boat tiba di Nusa Penida<br> 09.30 Mengunjungi Broken Beach & Billabong<br> 12.30 Makan Siang<br>                                        14.00 Mengunjungi Kelingking Beach & Paluang Cliff<br> 16.30 Mengunjungi Crystal Beach (Sunset)<br> 19.00 Antar makan malam di local resto<br> 20.00 Kembali ke hotel<br>
-                                        <strong>Hari 2</strong><br> 07.00 Breakfast di hotel<br> 08.00 Jemput di hotel<br> 09.00 Mengunjungi Bukit Teletubbies<br> 11.00 Mengunjungi Rumah Pohon & Pulau Seribu<br> 12.30 Makan siang<br> 14.00 Mengunjungi
-                                        Diamond Beach<br> 14.30 Mengunjungi Atuh Beach<br> 16.00 Tiba di pelabuhan Penida<br> 16.30 Boat berangkat menuju pantai Sanur<br> 17.30 Tiba kembali di Pantai Sanur<br>
+                                        07:30 AM Meeting Point di pelabuhan pantai sanur <br> 08:00 AM Berangkat ke Nusa Penida dengan Speedboat <br> 08:45 AM Tiba di Nusa Penida (Driver standby di Pelabuhan dengan Kertas Nama) <br> 10:15 AM Tiba di Angels
+                                        Billabong dan Broken Beach <br> 12:00 PM Tiba di Kelingking Beach <br> 13:00 PM Makan Siang di Area Kelingking Beach <br> 13:30 PM Tiba di Crystal Bay Beach <br> 14:30 PM Snorkeling 3 Spot <br> 19:00 PM Mengantar
+                                        makan malam di Restoran <br> 20:00 PM Tiba di Hotel <br> 07:00 AM Breakfast di Hotel <br> 07:30 AM Balik ke Sanur dengan Speedboat <br>
                                     </p>
                                 </div>
                             </div>
@@ -341,7 +339,7 @@
 
                                 <div class="col-md-10 col-sm-9">
                                     <p>
-                                        Tiket Boat PP Sanur-Penida<br> Mobil + BBM + Driver/Guide di Penida<br> Makan Siang (Nasi Kotak* dan resto) & Air mineral<br> Hotel (AC + WIFI + Breakfast + Swimming Pool)<br> Tiket Wisata<br>
+                                        Tiket Boat PP Sanur-Penida<br> Mobil + BBM + Driver/Guide di Penida<br> Tiket Wisata & Alat Snorkeling<br> Makan Siang (Nasi Kotak)* & Air Mineral<br> Hotel ( AC+ WIFI + Breakfast + Swimming Pool)<br>
                                     </p>
                                 </div>
                             </div>
@@ -374,7 +372,7 @@
                                 <div class="col-md-10 col-sm-9">
                                     <div>
                                         <p>
-                                            Upgrade makan siang di resto, biaya tambahan Rp. 50.000,-/Orang <br> Antar jemput hotel, biaya tambahan 250.000-400.000 per mobil. <br>
+                                            Upgrade makan siang di resto, biaya tambahan Rp. 50.000,-/Orang<br> Antar jemput hotel, biaya tambahan 250.000-400.000 per mobil.<br>
                                         </p>
                                     </div>
                                 </div>
