--- a/penidathreedaytwonight.html
+++ b/penidathreedaytwonight.html
@@ -321,12 +321,15 @@
                             <div class="row">
                                 <div class="col-md-2 col-sm-3">
                                     <p class="pjVpProductPolicyTitle">
-                                        <strong>Check-in</strong>
+                                        <strong>Schedule</strong>
                                     </p>
                                 </div>
                                 <div class="col-md-10 col-sm-9">
                                     <p>
-                                        Donec dapibus semper sem, ac ultrices sem sagittis ut. Donec sit amet erat elit, sed pellentesque odio. In enim ligula, euismod a adipiscing in, laoreet quis turpis. Ut accumsan dignissim rutrum.
+                                        <strong>Hari 1 :</strong><br> 07.30 Bertemu di Pantai Sanur.<br> 08.00 Boat berangkat menuju Nusa Penida<br> 08.45 Boat tiba di Nusa Penida<br> 09.30 Mengunjungi Broken Beach & Billabong<br> 12.30 Makan Siang<br>                                        14.00 Mengunjungi Kelingking Beach & Paluang Cliff<br> 16.30 Mengunjungi Crystal Beach (Sunset)<br> 19.00 Antar makan malam di local resto<br> 20.00 Kembali ke hotel<br>
+                                        <strong>Hari 2</strong><br> 07.00 Breakfast di hotel<br> 08.00 Jemput di hotel<br> 09.00 Mengunjungi Bukit Teletubbies<br> 11.00 Mengunjungi Rumah Pohon & Pulau Seribu<br> 12.30 Makan siang<br> 14.00 Mengunjungi
+                                        Diamond Beach<br> 14.30 Mengunjungi Atuh Beach<br>16.00 kembali ke area sekitar hotel<br>19.00 Antar makan malam di local resto<br> 20.00 Kembali ke hotel<br><strong>Hari 3 :</strong><br> 07.00 : Sarapan di hotel<br>                                        08.00 : Jemput di hotel<br> 09.30 : Mengunjungi lokasi Snorkeling<br> 11.00 : Makan siang dan mengunjungi : Pura Giri Putri Tembeling
+                                        <br> 16.00 : Kembali ke Dermaga<br> 17.00 : Boat berangkat menuju Pantai Sanur<br> 17.30 : Tiba di Pantai Sanur<br>
                                     </p>
                                 </div>
                             </div>
@@ -336,13 +339,13 @@
                             <div class="row">
                                 <div class="col-md-2 col-sm-3">
                                     <p>
-                                        <strong>Check-out</strong>
+                                        <strong>Facilities</strong>
                                     </p>
                                 </div>
 
                                 <div class="col-md-10 col-sm-9">
                                     <p>
-                                        Donec dapibus semper sem, ac ultrices sem sagittis ut. Donec sit amet erat elit, sed pellentesque odio. In enim ligula, euismod a adipiscing in, laoreet quis turpis. Ut accumsan dignissim rutrum.
+                                        Tiket Boat PP Sanur-Penida<br> Mobil + BBM + Driver/Guide di Penida<br> Makan Siang (resto)* & Air Mineral<br> Hotel ( AC+ WIFI + Breakfast + Swimming Pool)<br> Tiket Wisata & Alat Snorkeling<br>
                                     </p>
                                 </div>
                             </div>
@@ -352,12 +355,14 @@
                             <div class="row">
                                 <div class="col-md-2 col-sm-3">
                                     <p>
-                                        <strong>Pets</strong>
+                                        <strong>Suggested</strong>
                                     </p>
                                 </div>
                                 <div class="col-md-10 col-sm-9">
                                     <p>
-                                        Not allowed
+                                        Kaca Mata HItam<br> Sun Block<br> Uang Tunai<br> Celana Pendek/Baju Ganti<br> Sandal/Sepatu hiking atau sporty<br> Tas Anti Air<br> Hp
+                                        <br> Kamera
+                                        <br>
                                     </p>
                                 </div>
                             </div>
@@ -367,33 +372,13 @@
                             <div class="row">
                                 <div class="col-md-2 col-sm-3">
                                     <p>
-                                        <strong>Policies</strong>
+                                        <strong>Notes</strong>
                                     </p>
                                 </div>
                                 <div class="col-md-10 col-sm-9">
                                     <div>
                                         <p>
-                                            Donec dapibus semper sem, ac ultrices sem sagittis ut. Donec sit amet erat elit, sed pellentesque odio. In enim ligula, euismod a adipiscing in, laoreet quis turpis. Ut accumsan dignissim rutrum. <br> Donec
-                                            dapibus semper sem, ac ultrices sem sagittis ut. Donec sit amet erat elit, sed pellentesque odio. In enim ligula, euismod a adipiscing in, laoreet quis turpis. Ut accumsan dignissim rutrum. <br>
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-
-                        <li class="list-group-item">
-                            <div class="row">
-                                <div class="col-md-2 col-sm-3">
-                                    <p>
-                                        <strong>Fees</strong>
-                                    </p>
-                                </div>
-
-                                <div class="col-md-10 col-sm-9">
-                                    <div>
-                                        <p>
-                                            Donec dapibus semper sem, ac ultrices sem sagittis ut. Donec sit amet erat elit, sed pellentesque odio. In enim ligula, euismod a adipiscing in, laoreet quis turpis. Ut accumsan dignissim rutrum. <br> Donec
-                                            dapibus semper sem, ac ultrices sem sagittis ut. Donec sit amet erat elit, sed pellentesque odio. In enim ligula, euismod a adipiscing in, laoreet quis turpis. Ut accumsan dignissim rutrum. <br>
+                                            Upgrade makan siang di resto, biaya tambahan Rp. 50.000,-/Orang<br> Antar jemput hotel, biaya tambahan 250.000-400.000 per mobil.<br>
                                         </p>
                                     </div>
                                 </div>
