--- a/penidatwodayonenightsnorkeling.html
+++ b/penidatwodayonenightsnorkeling.html
@@ -86,7 +86,7 @@
                     <div class="col-lg-12">
                         <div class="text-content">
                             <h4>€300 - €4000</h4>
-                            <h2>Nusa Penida, Two Day One Night Tour.</h2>
+                            <h2>Nusa Penida, Two Day One Night + Snorkeling.</h2>
                         </div>
                     </div>
                 </div>
@@ -157,15 +157,16 @@
 
                         <div class="content">
                             <p>- Available: Everyday
-                                <br> - Kelingking Beach
-                                <br> - Broken Beach (Pasih Uug)
-                                <br> - Angel’s Billabong
+                                <br> - Kelingking Cliff
+                                <br> - Broken Beach
+                                <br> - Angels Billabong
                                 <br> - Crystal Bay
-                                <br> - Atuh Beach (Pantai Atuh)
+                                <br> - Snorkeling
                                 <br> - Diamond Beach
-                                <br> - Pulau Seribu/ Raja Lima
-                                <br> - Rumah Pohon (Molenteng)
-                                <br> - Bukit Teletubies
+                                <br> - Pulau Seribu
+                                <br> - Rumah Pohon
+                                <br> - Atuh Beach
+                                <br> - Bukit Teletubbies
                             </p>
                         </div>
                     </div>
@@ -270,33 +271,33 @@
                             <tbody>
                                 <tr>
                                     <td>1</td>
-                                    <td>Rp 1.850.000</td>
-                                    <td>Rp 1.850.000</td>
+                                    <td>Rp 2.100.000</td>
+                                    <td>Rp 2.100.000</td>
                                 </tr>
                                 <tr>
                                     <td>2</td>
-                                    <td>Rp 1.150.000 </td>
-                                    <td>Rp 2.300.000</td>
+                                    <td>Rp 1.400.000</td>
+                                    <td>Rp 2.800.000</td>
                                 </tr>
                                 <tr>
                                     <td>3</td>
-                                    <td>Rp 950.000</td>
-                                    <td>Rp 2.850.000</td>
+                                    <td>Rp 1.200.000</td>
+                                    <td>Rp 3.600.000</td>
                                 </tr>
                                 <tr>
                                     <td>4</td>
-                                    <td>Rp 825.000</td>
-                                    <td>Rp 3.300.000</td>
+                                    <td>Rp 1.100.000</td>
+                                    <td>Rp 4.400.000</td>
                                 </tr>
                                 <tr>
                                     <td>5</td>
-                                    <td>Rp 750.000</td>
-                                    <td>Rp 3.750.000</td>
+                                    <td>Rp 1.000.000</td>
+                                    <td>Rp 5.000.000</td>
                                 </tr>
                                 <tr>
                                     <td>6</td>
-                                    <td>Rp 725.000</td>
-                                    <td>Rp 4.350.000</td>
+                                    <td>Rp 950.000</td>
+                                    <td>Rp 5.700.000</td>
                                 </tr>
                             </tbody>
                         </table>
@@ -322,10 +323,9 @@
                                     </p>
                                 </div>
                                 <div class="col-md-10 col-sm-9">
-                                    <p>
-                                        <strong>Hari 1 :</strong><br> 07.30 Bertemu di Pantai Sanur.<br> 08.00 Boat berangkat menuju Nusa Penida<br> 08.45 Boat tiba di Nusa Penida<br> 09.30 Mengunjungi Broken Beach & Billabong<br> 12.30 Makan Siang<br>                                        14.00 Mengunjungi Kelingking Beach & Paluang Cliff<br> 16.30 Mengunjungi Crystal Beach (Sunset)<br> 19.00 Antar makan malam di local resto<br> 20.00 Kembali ke hotel<br>
-                                        <strong>Hari 2</strong><br> 07.00 Breakfast di hotel<br> 08.00 Jemput di hotel<br> 09.00 Mengunjungi Bukit Teletubbies<br> 11.00 Mengunjungi Rumah Pohon & Pulau Seribu<br> 12.30 Makan siang<br> 14.00 Mengunjungi
-                                        Diamond Beach<br> 14.30 Mengunjungi Atuh Beach<br> 16.00 Tiba di pelabuhan Penida<br> 16.30 Boat berangkat menuju pantai Sanur<br> 17.30 Tiba kembali di Pantai Sanur<br>
+                                    <p><strong>Hari 1</strong><br> 07.30 : Bertemu di Pantai Sanur<br> 08.00 : Boat berangkat menuju Nusa Penida<br> 08.45 : Boat tiba di Nusa Penida<br> 09.30 : Mengunjungi Crystal Bay untuk Snorkeling<br> 12.00 : Mengunjungi
+                                        Kelingking Beach & Paluang Cliff<br> 13.00 : Makan Siang<br> 15.30 : Mengunjungi Broken Beach & Angels Billabong<br> 18.00 : Menuju Hotel<br> 19.00 : Antar makan malam di Resto<br>
+                                        <strong>Hari 2</strong><br> 07.00 : Breakfast di hotel<br> 08.00 : Jemput di hotel<br> 09.00 : Mengunjungi Bukit Teletubbies<br> 11.00 : Mengunjungi Rumah Pohon & Pulau Seribu<br> 14.00 : Mengunjungi Diamond Beach<br>                                        14.30 : Mengunjungi Atuh Beach<br> 16.00 : Tiba di Pelabuhan Penida<br> 16.30 : Boat berangkat menuju Pantai Sanur<br> 17.30 : Tiba kembali di Pantai Sanur<br>
                                     </p>
                                 </div>
                             </div>
@@ -341,7 +341,7 @@
 
                                 <div class="col-md-10 col-sm-9">
                                     <p>
-                                        Tiket Boat PP Sanur-Penida<br> Mobil + BBM + Driver/Guide di Penida<br> Makan Siang (Nasi Kotak* dan resto) & Air mineral<br> Hotel (AC + WIFI + Breakfast + Swimming Pool)<br> Tiket Wisata<br>
+                                        Tiket Boat PP Sanur-Penida<br> Mobil + BBM + Driver/Guide di Penida<br> Makan Siang (Nasi Kotak* dan resto) & Air mineral<br> Hotel (AC + WIFI + Breakfast + Swimming Pool)<br> Tiket Wisata & Alat Snorkeling<br>
                                     </p>
                                 </div>
                             </div>
@@ -374,7 +374,7 @@
                                 <div class="col-md-10 col-sm-9">
                                     <div>
                                         <p>
-                                            Upgrade makan siang di resto, biaya tambahan Rp. 50.000,-/Orang <br> Antar jemput hotel, biaya tambahan 250.000-400.000 per mobil. <br>
+                                            Upgrade makan siang di resto, biaya tambahan Rp. 50.000,-/Orang<br> Antar jemput hotel, biaya tambahan 250.000-400.000 per mobil.<br>
                                         </p>
                                     </div>
                                 </div>
